# django-customer

./: README.md
AbstractUserApp/django_customer/locale/ru/LC_MESSAGES/: django.mo
AbstractUserApp/django_customer/migrations/: 0001_initial.py
django-customer/: LICENSE  MANIFEST.in  README.md  pyproject.toml
django-customer/django_customer/: admin.py  admin_forms.py  apps.py
django-customer/django_customer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django-customer/django_customer/locale/ru/LC_MESSAGES/: django.po
django-customer/django_customer/migrations/: 0001_initial.py  0002_alter_customer_options_alter_customer_address_and_more.py
django_customer/: README.rst  pyproject.toml
django_customer/AbstractUser/: admin.py  admin_forms.py  apps.py  models.py  setup.cfg
django_customer/AbstractUser/locale/ru/LC_MESSAGES/: django.mo  django.po
